# wherehouse

./: Cargo.toml  ]
src/: app.rs  cache.rs  commands.rs  input.rs  lib.rs  logging.rs  main.rs  package_manager.rs  state.rs  task_manager.rs  tui.rs  widget.rs  worker.rs
src/package_manager/: backend.rs  command.rs  dnf.rs  error.rs  homebrew.rs  manager.rs  mod.rs  pnpm.rs  types.rs  util.rs
src/state/: event.rs  mod.rs  update.rs
src/task_manager/: manager.rs  mod.rs  worker.rs
src/widget/: about_pane.rs  context_pane.rs  healthcheck_pane.rs  info_pane.rs  search_input_pane.rs  search_pane.rs  search_results_pane.rs  status_bar.rs  toast.rs
